--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Noto Sans Mono, sans-serif;
   } 
 
 .main{
@@ -123,3 +124,120 @@ body {
     align-items: center;
     justify-content: center;
 }
+/************* 2nd page **************/
+
+.second-page{
+    display: flex;
+    flex-direction: column;
+    padding-left: 70px;
+    background-color: #F1F2F3;
+}
+#arrow{
+    color:#28EEA7;
+    font-weight:900;
+}
+.second-page h2{
+    padding-top: 70px;
+    padding-bottom: 20px;
+    font-size: 20px;
+    color: #363738;
+    margin-left: 15px;
+    font-weight: 900;
+}
+
+.video{
+    display: block;
+    box-sizing: border-box;
+    padding-top: 56.17021276595745%;
+    border: 15px solid #28eea7;
+    border-radius: 20px;
+    width: 95%;
+    background-image: url(https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg);
+    background-position: 50%;
+    background-size: cover;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    position: relative;
+}
+
+/************** third page ***************/
+
+.third-page{
+
+    
+    margin-left: 70px;
+    margin-right: 70px;
+  
+  }
+.third-page h2{
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
+  #narrow{
+    color:#28EEA7;
+    font-weight:900;
+}
+  .container{
+  display: flex;
+  flex-direction: row;
+   gap: 20px;
+   
+  }
+  
+  .left{
+   background-color: #F1F2F3;
+   width: 50%;
+   height: 400px;
+   border-radius: 15px;
+  }
+  
+  .right{
+    
+    width: 50%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+  }
+  .up{
+    height: 50%;
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    
+  }
+  
+  .uLeft{
+    background-color: #F1F2F3;
+    width: 60%;
+    height: 100%;
+    border-radius: 15px;
+  }
+  .uRight{
+    background-color: #F1F2F3;
+    width: 40%;
+    height: 100%;
+    border-radius: 15px;
+  }
+  .down{
+    height: 50%;
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    }
+  .dLeft{
+    background-color: #F1F2F3;
+    width: 50%;
+    height: 100%;
+    border-radius: 15px;
+  }
+  .dRight{
+    background-color:#F1F2F3;
+    width: 50%;
+    height: 100%;
+    border-radius: 15px;
+  }
