--- a/styles.css
+++ b/styles.css
@@ -335,3 +335,74 @@ body {
         font-weight: bolder;
         
     }
+
+    /************ fifth page ************/
+
+    .fifth-page{
+
+        background-color: #363738;
+
+    }
+
+    #tat {
+        padding-top: 70px;
+        padding-bottom: 20px;
+        font-size: 20px;
+        color: #FCFCFD;
+        margin-left: 15px;
+        font-weight: 900;
+
+        margin-top: 70px;
+        margin-bottom: 50px;
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+
+    .hire-container{
+        display: flex;
+        flex-direction: column;
+        margin-left: 70px;
+        margin-right: 70px;
+        background-color: #232323;
+        color: #FCFCFD;
+        padding-left: 40px;
+        padding-top: 20px;
+        letter-spacing: 2px;
+        margin-bottom: 40px;
+        border-radius: 20px;
+    }
+
+    #title{
+        background-color: #363738;
+        width: 710px;
+        height: 40px;
+        align-content: center;
+        justify-content: center;
+    }
+
+    #contactUS{
+        margin-top: 40px;
+        display: inline-flex;
+        padding: 15px 22px;
+        justify-content: flex-end;
+        width: 1000px;
+        align-items: center;
+        gap: 10px;
+        background: #313233;
+        color: white;
+        font-weight: bolder;
+        text-decoration: none;
+    }
+
+    .down-container{
+        background-color: #232323;
+        display: flex;
+        justify-content: flex-end;
+        margin-left: 70px;
+        margin-right: 70px;
+        align-items: center;
+        color: white;
+        gap: 20px;
+        border-radius: 15px;
+        margin-bottom: 20px;
+    }
